edit social icons

--- a/css/home.css
+++ b/css/home.css
@@ -249,7 +249,7 @@ nav {
   }
 
   #secondary-links .fa {
-      display: inline-block;
+      display: inline-block!important;
   }
   
   [id^="collapsed-menu"] {
