edit social icons

--- a/css/home.css
+++ b/css/home.css
@@ -248,7 +248,7 @@ nav {
     font-size: 16px;
   }
 
-  #secondary-links .fa {
+  #secondary-links a span.fa {
       display: inline-block!important;
   }
   
