--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -65,7 +65,7 @@
     margin-top: -20%;
   }
   #main-content-service-selector-wrapper {
-    top: 55vh;
+    top: 52.5vh;
   }
   #main-content h1, #main-content h2 {
     top: 25%;
@@ -206,18 +206,16 @@
   .bio {
     flex-direction: column;
     height: 100%!important;
-    margin: 5% auto!important;
-    width: 75%;
   }
   .bio-image > img {
     width: 100%;
     height: 100%!important;
   }
   .biobox-header {
-    padding: 15px 25px;
+    padding: 15px 25px 0 25px;
   }
   .biobox p {
-    padding: 15px 25px;
+    padding: 0 25px 15px 25px;
   }
   #meet-our-owners .biobox {
     margin-right: 0!important;
@@ -293,7 +291,7 @@
     margin: 0 5%;
   }
   #main-content-service-selector-wrapper {
-    top: 45vh;
+    top: 50vh;
   }
   #hero-text {
     top: 27.5vh; 
