--- a/css/home.css
+++ b/css/home.css
@@ -440,7 +440,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center; 
-    padding: 10% 5% 5% 5%; 
+    padding: 5%; 
     color: grey;
   }
   
@@ -461,9 +461,13 @@ nav {
   }
   #mc_embed_signup label {
       color: #fff;
+      font-weight: 400!important;
   }
   .clear, #mc_embed_signup input.email {
       border: 0!important;
+      width: 35%!important;
+      margin: 1.5% 0!important;
+      font-size: 14px!important;
   }
 
   #mc_embed_signup input.email {
