--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,6 +6,18 @@
       <p>Cedar Falls, IA 50613</p>
     </div>
     <a href="tel:3194818326">(319) 481-8326</a>
+    <div id="mc_embed_signup">
+        <form action="https://teambuilderslimited.us2.list-manage.com/subscribe/post?u=3505b437145ee33b184d2b30a&amp;id=5ee4451a83" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+        <label for="mce-EMAIL">Discover Trends, Ideas, Inspiration &amp; Products</label>
+        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email address" required>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3505b437145ee33b184d2b30a_5ee4451a83" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-secondary"></div>
+            </div>
+        </form>
+        </div>
+  </div>
   </div>
   <div class="footer-column">
   <h4>Interior Remodeling</h4>
