--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,7 +17,7 @@
             </div>
         </form>
         </div>
-  </div>
+  <!-- </div> -->
   </div>
   <div class="footer-column">
   <h4>Interior Remodeling</h4>
