--- a/css/home.css
+++ b/css/home.css
@@ -469,7 +469,7 @@ nav {
   .clear, #mc_embed_signup input.email {
       border: 0!important;
       width: 35%!important;
-      margin: 1.5% 0!important;
+      margin: 5px 0!important;
       font-size: 14px!important;
   }
 
