separate ext. remodeling sections into 2 rows

--- a/css/home.css
+++ b/css/home.css
@@ -104,8 +104,9 @@
   display: flex;
 }
 
-#main-content-service-cards-exterior .service-card {
-    width: 25%;
+/* Used in the exterior remodeling section since there are 5 categories so we need to have two rows */
+.service-card-row .service-card {
+    width: 30%;
 }
 
 .service-card {
