--- a/css/home.css
+++ b/css/home.css
@@ -105,9 +105,15 @@
 }
 
 /* Used in the exterior remodeling section since there are 5 categories so we need to have two rows */
-/* .service-card-row .service-card {
-    width: 30%;
-} */
+.service-card-row {
+    display: flex;
+    justify-content: center;
+}
+
+.service-card-row .service-card {
+    display: inline-block;
+    width: 33%;
+}
 
 .service-card {
   background-color: #fff;
