--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -280,4 +280,9 @@
     display: flex;
     align-items: center;
   }
+
+  .steps-container {
+      display: flex;
+      flex-direction: column;
+  }
   
