rmv margin on hero section

--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -281,8 +281,8 @@
     align-items: center;
   }
 
-  .steps-container {
+  /* .steps-container {
       display: flex;
       flex-direction: column;
-  }
+  } */
   
