add photos to our work page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,7 +33,7 @@
         <div id="collapsed-menu-exterior">
           <a href="/fencing.html">Fences</a>
           <a href="/roofing.html">Roofing</a>
-          <a href="/deck-pergolas.html">Decks</a>
+          <a href="/decks.html">Decks</a>
           <a href="/pergolas.html">Pergolas</a>
           <a href="/siding.html">Siding</a>
         </div>
