small padding edit

--- a/css/home.css
+++ b/css/home.css
@@ -457,7 +457,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center; 
-    padding: 0 5% 5% 5%; 
+    padding: 5%; 
     color: grey;
   }
   
