--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,11 +9,11 @@
     <a href="https://www.instagram.com/teambuilderslimited/"><span class="fa fa-instagram" aria-hidden="true"></span></a>
     <a href="https://www.youtube.com/channel/UCq7x6SEpZcGiF68RuVP7B-g/videos"><span class="fa fa-youtube-play" aria-hidden="true"></span></a>
     </div>
-    <a href="/our-work.html">Our Work</a>
-    <a href="/contact-us.html">Contact Us</a>
-    <a href="/roofing.html" class="roof-estimate">Roof Estimate</a>
-    <a href="/client-feedback-form.html" class="client-feedback">Client Feedback</a>
-    <a href="/referral.html" class="referral-program">Referral Program</a>
+    <a href="/our-work">Our Work</a>
+    <a href="/contact-us">Contact Us</a>
+    <a href="/roofing" class="roof-estimate">Roof Estimate</a>
+    <a href="/client-feedback-form" class="clpient-feedback">Client Feedback</a>
+    <a href="/referral" class="referral-program">Referral Program</a>
     <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank" class="leave-review">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
     <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
   </div>
@@ -25,33 +25,33 @@
         <a href="/">Home</a>
         <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
           <div id="collapsed-menu-interior">
-            <!-- <a href="/bathroom-renovations.html">Bathroom Renovations</a> -->
-            <a href="/basement-renovations.html">Basement Renovations</a>
-            <a href="/kitchen-renovations.html">Kitchen Renovations</a>
+            <!-- <a href="/bathroom-renovations">Bathroom Renovations</a> -->
+            <a href="/basement-renovations">Basement Renovations</a>
+            <a href="/kitchen-renovations">Kitchen Renovations</a>
           </div>
         <a href="#" id="collapse-toggle-exterior">Exterior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
         <div id="collapsed-menu-exterior">
-          <a href="/fencing.html">Fences</a>
-          <a href="/roofing.html">Roofing</a>
-          <a href="/decks.html">Decks</a>
-          <a href="/pergolas.html">Pergolas</a>
-          <a href="/siding.html">Siding</a>
+          <a href="/fencing">Fences</a>
+          <a href="/roofing">Roofing</a>
+          <a href="/deck-pergolas">Decks</a>
+          <a href="/pergolas">Pergolas</a>
+          <a href="/siding">Siding</a>
         </div>
         <a href="#" id="collapse-toggle-shed">Shed Homes<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
         <div id="collapsed-menu-shed">
-          <a href="/shed-homes-shouses.html">Shed Houses "Shouses"</a>
-          <a href="/agriculture-commercial-buildings.html">Agriculture & Commercial Buildings</a>
-          <a href="/event-venues.html">Event Venues</a>
+          <a href="/shed-homes-shouses">Shed Houses "Shouses"</a>
+          <a href="/agriculture-commercial-buildings">Agriculture & Commercial Buildings</a>
+          <a href="/event-venues">Event Venues</a>
         </div>
       </div>
       <div id="secondary-links">
-        <a href="/our-work.html">Our Work</a>
-        <a href="/process.html">Our Process</a>
-        <a href="/about-our-owners.html">About Our Owners</a>
-        <a href="/contact-us.html">Contact Us</a>
-        <a href="/roofing.html">Roof Estimate</a>
-        <a href="/client-feedback-form.html">Client Feedback</a>
-        <a href="/referral.html">Referal Program</a>
+        <a href="/our-work">Our Work</a>
+        <a href="/process">Our Process</a>
+        <a href="/about-t-e-a-m-builders">About Our Owners</a>
+        <a href="/contact-us">Contact Us</a>
+        <a href="/roofing">Roof Estimate</a>
+        <a href="/client-feedback-form">Client Feedback</a>
+        <a href="/referral">Referral Program</a>
         <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
         <a href="tel:3194818326">Call Us</a>
         <a href="https://www.facebook.com/teambuilderslimited/" style="display: inline-block;" title="Facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
