--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -280,4 +280,30 @@
     display: flex;
     align-items: center;
   }
+
+  .contact-info-container {
+      display: flex;
+      justify-content: center;
+  }
+
+  .contact-info-container div{
+    margin: 0 5%;
+}
+
+.contact-info-container i{
+    font-size: 32px;
+    color: #9AB858;
+}
+
+.calendly {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 9999;
+    background: #fff;
+    height: 100%;
+}
   
