--- a/templates/footer.html
+++ b/templates/footer.html
@@ -22,38 +22,38 @@
   <div class="footer-column">
   <h4>Interior Remodeling</h4>
   <ul>
-    <!-- <li><a href="/bathroom-renovations.html">Bathroom Renovations</a></li> -->
-    <li><a href="/basement-renovations.html">Basement Renovations</a></li>
-    <li><a href="/kitchen-renovations.html">Kitchen Renovations</a></li>
+    <!-- <li><a href="/bathroom-renovations">Bathroom Renovations</a></li> -->
+    <li><a href="/basement-renovations">Basement Renovations</a></li>
+    <li><a href="/kitchen-renovations">Kitchen Renovations</a></li>
   </ul>
   </div>
   <div class="footer-column">
   <h4>Exterior Remodeling</h4>
   <ul>
-    <li><a href="/fencing.html">Fences</a></li>
-    <li><a href="/roofing.html">Roofing</a></li>
-    <li><a href="/decks.html">Decks</a></li>
-    <li><a href="/pergolas.html">Pergolas</a></li>
-    <li><a href="/siding.html">Siding</a></li>
+    <li><a href="/fencing">Fences</a></li>
+    <li><a href="/roofing">Roofing</a></li>
+    <li><a href="/decks">Decks</a></li>
+    <li><a href="/pergolas">Pergolas</a></li>
+    <li><a href="/siding">Siding</a></li>
   </ul>
   </div>
   <div class="footer-column">
   <h4>Shed Homes</h4>
   <ul>
-    <li><a href="/shed-houses-shouses.html">Shed Houses "Shouses"</a></li>
-    <li><a href="/agriculture-commercial-buildings.html">Agricultural & Commercial Buildings</a></li>
-    <li><a href="/event-venues.html">Event Venues</a></li>
+    <li><a href="/shed-houses-shouses">Shed Houses "Shouses"</a></li>
+    <li><a href="/agriculture-commercial-buildings">Agricultural & Commercial Buildings</a></li>
+    <li><a href="/event-venues">Event Venues</a></li>
   </ul>
   </div>
   <div class="footer-column">
   <h4>More</h4>
   <ul>
-    <li><a href="/interior-remodeling.html">Interior Remodeling</a></li>
-    <li><a href="/exterior-remodeling.html">Exterior Remodeling</a></li>
-    <li><a href="/shed-homes-shouses.html">Shed Homes "Shouses"</a></li>
-    <li><a href="/our-work.html">Our Work</a></li>
-    <li><a href="/process.html">Our Process</a></li>
-    <li><a href="/contactus.html">Contact Us</a></li>
+    <li><a href="/interior-remodeling">Interior Remodeling</a></li>
+    <li><a href="/exterior-remodeling">Exterior Remodeling</a></li>
+    <li><a href="/shed-homes-shouses">Shed Homes "Shouses"</a></li>
+    <li><a href="/our-work">Our Work</a></li>
+    <li><a href="/process">Our Process</a></li>
+    <li><a href="/contactus">Contact Us</a></li>
     <li><a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google"></a></li>
   </ul>
   </div>
