--- a/css/global.css
+++ b/css/global.css
@@ -1,197 +1,197 @@
 * {
-  font-family: 'PT Sans', sans-serif;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-@media screen and (preferes-reduced-motion: reduce) {
+    font-family: 'PT Sans', sans-serif;
+  }
+  
   html {
     scroll-behavior: smooth;
   }
-}
-
-html, body {
-  overflow-x: hidden;
-}
-
-h1, h2, h3, h4, h5, h6, a, p, li {
-  color: #666;
-  font-weight: 400;
-}
-
-.subpage h1 {
-  margin: 0;
-}
-
-h4 {
-  text-transform: uppercase;
-}
-
-h5 {
-  font-size: 20px;
-}
-
-hr {
-  margin: 15px 32.5px;
-}
-
-a {
-  text-decoration: none;
-}
-
-p, li {
-  font-size: 16px;
-  margin: 0;
-  line-height: 1.5;
-}
-
-li {
-  padding: 3% 0;
-}
-
-ul {
-  list-style-type: none;
-  padding-inline-start: 0px;
-}
-
-ol {
-  padding-inline-start: 15px;  
-}
-
-ol li {
-  padding: 1% 0;
-}
-
-body {
-  margin: 0 auto;
-}
-
-.subpage {
-  position: relative;
-  top: 50px;
-  text-align: center;
-  padding: 5%;
-  max-width: 1080px;
-  margin: 0 auto;
-}
-
-.subpage.align-left {
-  text-align: left;
-}
-
-.mt-0 {
-  margin-top: 0;
-}
-
-.mr-5 {
-  margin-right: 5%;
-}
-
-.center-focus {
-  width: 60%;
-  margin: 0 auto;
-  padding: 0 5%;
-}
-
-.row {
-  display: flex;
-  padding: 2.5% 5%;
-  max-width: 1080px;
-  margin: 0 auto;
-}
-
-.row.reverse {
-  flex-direction: column-reverse;
-}
-
-.align-items-center {
-  align-items: center;
-}
-
-.col {
-  width: 100%;
-}
-
-.col img {
-  max-width: 100%;
-  object-fit: cover;
-}
-
-.green-link {
-  color: #9AB858;
-  text-decoration: underline;
-}
-
-/* Icons */
-.fa-angle-double-right, .fa-google{
+  
+  @media screen and (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: smooth;
+    }
+  }
+  
+  html, body {
+    overflow-x: hidden;
+  }
+  
+  h1, h2, h3, h4, h5, h6, a, p, li {
+    color: #666;
+    font-weight: 400;
+  }
+  
+  .subpage h1 {
+    margin: 0;
+  }
+  
+  h4 {
+    text-transform: uppercase;
+  }
+  
+  h5 {
+    font-size: 20px;
+  }
+  
+  hr {
+    margin: 15px 32.5px;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  p, li {
+    font-size: 16px;
+    margin: 0;
+    line-height: 1.5;
+  }
+  
+  li {
+    padding: 3% 0;
+  }
+  
+  ul {
+    list-style-type: none;
+    padding-inline-start: 0px;
+  }
+  
+  ol {
+    padding-inline-start: 15px;  
+  }
+  
+  ol li {
+    padding: 1% 0;
+  }
+  
+  body {
+    margin: 0 auto;
+  }
+  
+  .subpage {
     position: relative;
+    top: 50px;
+    text-align: center;
+    padding: 5%;
+    max-width: 1080px;
+    margin: 0 auto;
   }
   
-  .fa-angle-double-right {
-    transition: 0.2s ease-in-out all;
-    font-size: 18px!important;
-    top: 1px;
-    left: 10px;
+  .subpage.align-left {
+    text-align: left;
   }
   
-  .fa-angle-double-right:before {
-    position: relative;
-    bottom: 2px;
+  .mt-0 {
+    margin-top: 0;
   }
   
-  .fa-google {
-    font-size: 14px!important;
-    left: 5px;
+  .mr-5 {
+    margin-right: 5%;
   }
   
-  .rotate {
-    -ms-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
+  .center-focus {
+    width: 60%;
+    margin: 0 auto;
+    padding: 0 5%;
   }
   
-  .fa-youtube-play, .fa-instagram, .fa-facebook, .fa-pinterest {
-      color: #9AB858;
-  }
-
-  /* Buttons */
-  .btn {
-    border-radius: 0;
-    padding: 10px 25px;
-    transition: 0.3s ease-in-out all;
-    display: inline-block;
+  .row {
+    display: flex;
+    padding: 2.5% 5%;
+    max-width: 1080px;
+    margin: 0 auto;
   }
   
-  .btn:hover {
-    cursor: pointer;
+  .row.reverse {
+    flex-direction: column-reverse;
   }
   
-  .btn-primary {
-    color: #fff;
-    border: 2px solid #9AB858;
-    background: #9AB858;
+  .align-items-center {
+    align-items: center;
   }
   
-  .btn-secondary {
+  .col {
+    width: 100%;
+  }
+  
+  .col img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  
+  .green-link {
     color: #9AB858;
-    border: 2px solid #fff;
-    background: #fff;
+    text-decoration: underline;
   }
-
-  .btn-calendly {
-      background: #1DA2FF;
+  
+  /* Icons */
+  .fa-angle-double-right, .fa-google{
+      position: relative;
+    }
+    
+    .fa-angle-double-right {
+      transition: 0.2s ease-in-out all;
+      font-size: 18px!important;
+      top: 1px;
+      left: 10px;
+    }
+    
+    .fa-angle-double-right:before {
+      position: relative;
+      bottom: 2px;
+    }
+    
+    .fa-google {
+      font-size: 14px!important;
+      left: 5px;
+    }
+    
+    .rotate {
+      -ms-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
+      transform: rotate(90deg);
+    }
+    
+    .fa-youtube-play, .fa-instagram, .fa-facebook, .fa-pinterest {
+        color: #9AB858;
+    }
+  
+    /* Buttons */
+    .btn {
+      border-radius: 0;
+      padding: 10px 25px;
+      transition: 0.3s ease-in-out all;
+      display: inline-block;
+    }
+    
+    .btn:hover {
+      cursor: pointer;
+    }
+    
+    .btn-primary {
       color: #fff;
-      background: #1DA2FF;
-      color: #fff;
-      z-index: 99999;
-      position: fixed;
-      bottom: 0;
-      right: 0;
-  }
-
-  .powered-by {
-      font-size: 12px;
-  }
+      border: 2px solid #9AB858;
+      background: #9AB858;
+    }
+    
+    .btn-secondary {
+      color: #9AB858;
+      border: 2px solid #fff;
+      background: #fff;
+    }
+  
+    .btn-calendly {
+        background: #1DA2FF;
+        color: #fff;
+        background: #1DA2FF;
+        color: #fff;
+        z-index: 99999;
+        position: fixed;
+        bottom: 0;
+        right: 0;
+    }
+  
+    .powered-by {
+        font-size: 12px;
+    }
