new insurance claims page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,8 +12,9 @@
     <a href="/our-work">Our Work</a>
     <a href="/contact-us">Contact Us</a>
     <a href="/roofing" class="roof-estimate">Roof Estimate</a>
-    <a href="/client-feedback-form" class="clpient-feedback">Client Feedback</a>
+    <a href="/client-feedback-form" class="client-feedback">Client Feedback</a>
     <a href="/referral" class="referral-program">Referral Program</a>
+    <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>
     <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank" class="leave-review">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
     <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
   </div>
