--- a/css/service-subpages.css
+++ b/css/service-subpages.css
@@ -299,4 +299,9 @@
       width: 75%;
       margin: 0 auto;
   }
+
+  /* Insurance Claims Page */
+  #insurance-claims img {
+      width: 100%;
+  }
     
