new insurance claims page

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -50,6 +50,7 @@
         <a href="/process">Our Process</a>
         <a href="/about-t-e-a-m-builders">About Our Owners</a>
         <a href="/contact-us">Contact Us</a>
+        <a href="/insurance-claims">Insurance Claims</a>
         <a href="/roofing">Roof Estimate</a>
         <a href="/client-feedback-form">Client Feedback</a>
         <a href="/referral">Referral Program</a>
