--- a/css/home.css
+++ b/css/home.css
@@ -83,8 +83,6 @@
   
   #main-content-service-selector-wrapper {
     width: 85%;
-    position: relative;
-    top: 75px;
     margin: 0 auto;
   }
   
@@ -100,9 +98,9 @@
   
   [id^="main-content-service-cards"] {
     justify-content: center;
-    /* height: 40vh; */
+    height: 40vh;
     width: 85%;
-    margin: 0 auto;
+    margin: 5% auto;
     display: flex;
   }
   
@@ -179,7 +177,6 @@
   nav {
       width: 100%;
       height: 85px;
-      background: #fff;
       display: flex;
       position: fixed;
       justify-content: space-between;
@@ -187,7 +184,7 @@
       margin: 0 auto;
       z-index: 1000;
       box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px;
-    }
+  }
     
     /* Main Menu */
     #main-menu {
@@ -459,7 +456,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center; 
-      padding: 10% 5%; 
+      padding: 5% 5% 10% 5%; 
       color: grey;
     }
     
