--- a/css/home.css
+++ b/css/home.css
@@ -176,14 +176,14 @@
   
   nav {
       width: 100%;
-      height: 85px;
+      top: 62px;
       display: flex;
       position: fixed;
       justify-content: space-between;
       align-items: center;
       margin: 0 auto;
       z-index: 1000;
-      box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px;
+      /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px; */
   }
     
     /* Main Menu */
