--- a/css/home.css
+++ b/css/home.css
@@ -51,17 +51,15 @@
   }
   
   #hero-text {
-      position: absolute;
-      top: 35vh;
-      left: 0;
-      right: 0;
-      margin-left: auto;
-      margin-right: auto;
+    position: absolute;
+    top: 35vh;
+    left: 7.5%;
+    text-align: left;
   }
   
   #main-content h1, #main-content h2, #main-content .btn {
     color: white;
-    text-align: center;
+    text-align: left;
     text-shadow: 0px 0px 8px #666;
     font-weight: 400;
     margin: 0;
@@ -83,7 +81,7 @@
   
   #main-content-service-selector-wrapper {
     width: 85%;
-    margin: 0 auto;
+    margin: 5% auto;
   }
   
   #main-content-service-selector > div {
@@ -163,6 +161,24 @@
   .hidden {
     display: none;
   }
+
+  .covid-accordion {
+    background: #9AB858;
+    width: 100%;
+    box-shadow: none;
+    margin: 0 auto;
+    top: 0;
+    text-align: center;
+  }
+
+  .covid-accordion a {
+      color: #fff;
+      text-decoration: underline;
+  }
+
+  .covid-accordion a:hover {
+    text-decoration: underline;
+}
   
   /* Slider */
   #main-content .slick-slider {
