--- a/css/home.css
+++ b/css/home.css
@@ -64,13 +64,19 @@
     font-weight: 400;
     margin: 0;
   }
+
+  #horo-buttons {
+      display: flex;
+  }
   
   #main-content .btn {
-    width: 20%;
-    display: flex;
-    margin: 0 auto;
-    justify-content: center;
     margin-top: 10px;
+  }
+
+  #main-content .btn-secondary {
+    background-color: #fff;
+    border: 1px solid #9AB858;
+    color: #9AB858;
   }
   
   #main-content h2 {
