--- a/css/home.css
+++ b/css/home.css
@@ -27,6 +27,7 @@
     margin: 20px 7.5px;
     text-transform: uppercase;
     font-size: 14px;
+    color: #fff;
   }
   
   #main-menu-container #feature-menu > a >span, #main-menu-container #feature-menu-2 > a >span {
@@ -209,12 +210,11 @@
   nav {
       width: 100%;
       top: 62px;
-      padding: 15px 0;
       display: flex;
       position: fixed;
       justify-content: space-between;
       align-items: center;
-      margin: 0 auto;
+      margin: 35px auto;
       z-index: 1000;
       /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px; */
   }
