--- a/css/home.css
+++ b/css/home.css
@@ -209,16 +209,19 @@
   
   nav {
     width: 100%;
-    top: 62px;
     padding: 15px 0;
     display: flex;
     position: fixed;
     justify-content: space-between;
     align-items: center;
-    margin: 20px auto;
     z-index: 1000;
+    margin: 0 auto;
     background-color: #fff;
       /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 14px 2px; */
+  }
+  .home nav {
+    top: 62px;
+    margin: 20px auto;
   }
     
     /* Main Menu */
