--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,8 +17,8 @@
     <div id="feature-menu-2">
       <a href="/contact-us">Contact Us</a>
       <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>
-      <div data-romw-token="QIQyYKiuB9IDMMRp8XFJ2g1O3fdyrXuEb1B0UZigAe5ubfsA2h"></div>
-<script src="https://reviewsonmywebsite.com/js/v2/embed.js?id=c338ae55b38e487f19ae" type="text/javascript"></script>
+      <!-- <div data-romw-token="QIQyYKiuB9IDMMRp8XFJ2g1O3fdyrXuEb1B0UZigAe5ubfsA2h"></div>
+<script src="https://reviewsonmywebsite.com/js/v2/embed.js?id=c338ae55b38e487f19ae" type="text/javascript"></script> -->
       <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
     </div>
     <div id="main-menu" class="sidebar">
