--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,8 @@
       <div id="collapseMenu">
         <a href="/"><img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/team-builders-logo.png" alt="Team Builders Limited Logo"></a>
         <div id="primary-links">
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>            
           <a href="/">Home</a>
           <a href="#" id="collapse-toggle-interior">Interior Remodeling<span class="fa fa-angle-double-right" aria-hidden="true"></span></a>
             <div id="collapsed-menu-interior">
@@ -57,7 +59,6 @@
           <a href="/client-feedback-form">Client Feedback</a>
           <a href="/referral">Referral Program</a>
           <a href="https://www.google.com/search?q=teambuilderslimited&rlz=1C1CHBF_enUS691US691&oq=team_builders_limited&aqs=chrome..69i57j0j69i60l4.6122j0j7&sourceid=chrome&ie=UTF-8#lrd=0x87f0001c6a61c2ef:0x4a6e6a79368ff93e,3,,,"  target="_blank">Leave a Review<span class="fa fa-google" aria-hidden="true"></span></a>
-          <a href="tel:3194818326">Call Us</a>
           <a href="https://www.facebook.com/teambuilderslimited/" style="display: inline-block;" title="Facebook"><span class="fa fa-facebook" aria-hidden="true"></span></a>
           <a href="https://www.pinterest.com/teambuilders0087/" style="display: inline-block; padding-left: 5px;" title="Pinterest"><span class="fa fa-pinterest" aria-hidden="true"></span></a>
           <a href="https://www.instagram.com/teambuilderslimited/" style="display: inline-block; padding-left: 5px;" title="Instagram"><span class="fa fa-instagram" aria-hidden="true"></span></a>
