--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,14 +11,13 @@
     <div id="feature-menu">
       <a href="/our-work">Our Work</a>
       <a href="/roofing" class="roof-estimate">Roof Estimate</a>
-      <a href="/client-feedback-form" class="client-feedback">Client Feedback</a>
-      <a href="/referral" class="referral-program">Referral Program</a>
+      <a href="https://www.acornfinance.com/apply/?d=HG2WM#/">Apply for a Loan</a>
     </div>
     <div id="feature-menu-2">
       <a href="/contact-us">Contact Us</a>
       <a href="/insurance-claims" class="insurance-claims">Insurance Claims</a>
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
+      <div class="elfsight-app-f4d6485e-4d7d-4d31-a35e-2a08784256cc"></div>
       <a href="tel:3194818326" class="phone-number"> (319) 481-8326 </a>
     </div>
     <div id="main-menu" class="sidebar">
